Revision history for Text-Table-Read-RelationOn-Tiny


v2.3.3     2025/01/15

         - Removed unwanted helper script from MANIFEST.

v2.3.2     2025/01/15

         - Corrected typos in POD.
         - Reformatted changelog.


v2.3.1     2023/10/12

         - Corrected POD.
         - Completed dependency list.
         - Corrected version info.

v2.3.0     2023/10/12

         - Methods elems(), elem_ids(), tab_elems(), eq_ids(), matrix() now support an
           additional DUP argument allowing to return a ref to a clone.
         - Removed subdir LICENSE, created file LICENSE.
         - Completed POD.

v2.2.6     2023/05/02

         - Adapted README, added LICENSE file.

v2.2.5     2023/04/30

         - Removed link to cpanratings.perl.org (Id: 148049).

v2.2.4     2022/04/11

         - Used croak() from Carp instead of die() and confess().
         - Corrected typo in POD. Some minor improvements in POD section.

v2.2.3     2022/04/11

         - Corrected typo in POD.

v2.2.2     2022/04/11

         - Added subsection PITFALLS to POD.
         - If pedantic is true, then first cheack indetation of a row.
         - Added tests.

v2.2.1     2022/04/09

         - Some fixes in POD section.

v2.2.0     2022/04/08

         - Add named argument 'pedantic' to get() to enable table format checking.

v2.1.0     2021/06/28

         - Added constructor options 'ext' and 'elem_id' allowing to use external data.

v2.0.1     2021/06/27

         - Fixed minor bug and completed description of constructor arguments 'inc' amd 'noinc'.

v2.0.0     2021/06/25

         - Completely reworked code.
         - Removed methods 'x_elem_ids', 'n_elems' and 'bless_matrix'.
         - Added methods 'eq_ids', 'tab_elems' and 'matrix_named'.
         - Constructor argument 'set' with subarray: changed structure of 'elem_ids' and 'elems'.
         - Constructor: added named argument 'eqs'.